examples/invalid/uppercase_hex_prefix.jasn
// Invalid hex binary with lowercase prefix
{
  bad: H"DEADBEEF"
}
